[package]
name = "grin_wallet_util"
version = "4.0.0-alpha.1"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
description = "Util, for generic utilities and to re-export grin crates"
license = "Apache-2.0"
repository = "https://github.com/vcashorg/vcash-wallet"
keywords = [ "crypto", "vcash", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
rand = "0.5"
serde = "1"
serde_derive = "1"
ed25519-dalek = "1.0.0-pre.1"
data-encoding = "2"
sha3 = "0.8"

# For Release
# grin_core = "3.1.0"
# grin_keychain = "3.1.0"
# grin_chain = "3.1.0"
# grin_util = "3.1.0"
# grin_api = "3.1.0"
# grin_store = "3.1.0"

# For beta release

# grin_core = { git = "https://github.com/vcashorg/vcash", tag = "v3.1.0"}
# grin_keychain = { git = "https://github.com/vcashorg/vcash", tag = "v3.1.0" }
# grin_chain = { git = "https://github.com/vcashorg/vcash", tag = "v3.1.0" }
# grin_util = { git = "https://github.com/vcashorg/vcash", tag = "v3.1.0" }
# grin_api = { git = "https://github.com/vcashorg/vcash", tag = "v3.1.0" }
# grin_store = { git = "https://github.com/vcashorg/vcash", tag = "v3.1.0" }

# For bleeding edge
grin_core = { git = "https://github.com/vcashorg/vcash", branch = "vcash" }
grin_keychain = { git = "https://github.com/vcashorg/vcash", branch = "vcash" }
grin_chain = { git = "https://github.com/vcashorg/vcash", branch = "vcash" }
grin_util = { git = "https://github.com/vcashorg/vcash", branch = "vcash" }
grin_api = { git = "https://github.com/vcashorg/vcash", branch = "vcash" }
grin_store = { git = "https://github.com/vcashorg/vcash", branch = "vcash" }

# For local testing
#grin_core = { path = "../../vcash/core"}
#grin_keychain = { path = "../../vcash/keychain"}
#grin_chain = { path = "../../vcash/chain"}
#grin_util = { path = "../../vcash/util"}
#grin_api = { path = "../../vcash/api"}
#grin_store = { path = "../../vcash/store"}

[dev-dependencies]
pretty_assertions = "0.5.1"
